<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NaverAuthenticateLogin">

    <EditText
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_login"
        android:hint="@string/edit_login_id"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColorHint="@color/login_btn"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_login"
        android:hint="@string/edit_login_pw"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColorHint="@color/login_btn"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/login_btn"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/login_btn"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/login_btn_img" />

    <TextView
        android:id="@+id/tvAccessToken"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/tvRefreshToken"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/tvExpires"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/tvType"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/tvState"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

</androidx.appcompat.widget.LinearLayoutCompat>